Add restricted node recovery control
