# indexer/src/main/java/com/inqwise/indexer/rest/admin/AdminRestVerticle.java
@@ -211,6 +211,12 @@ public class AdminRestVerticle extends AbstractVerticle {
 				);
 				RestOperations.bind(
 					builder,
+					"recoverNode",
+					context -> adminService.recoverNode(),
+					AdminRestVerticle::toJson
+				);
+				RestOperations.bind(
+					builder,
 					"infrastructureStatus",
 					context -> adminService.infrastructureStatus(),
 					AdminRestVerticle::toJson
